Implemented WPF -> FS Event conversion

--- a/FsSnowGlobe/FsSnowGlobe.fsproj
+++ b/FsSnowGlobe/FsSnowGlobe.fsproj
@@ -35,6 +35,7 @@
     <DocumentationFile>bin\Release\FsSnowGlobe.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Events.fs" />
     <Compile Include="GlobeViewModel.fs" />
     <Resource Include="MainWindow.xaml" />
     <Compile Include="MainWindow.xaml.fs" />
