--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 FsSnowGlobe/obj/x86/Debug/FsSnowGlobe.exe
 FsSnowGlobe/obj/x86/Debug/FsSnowGlobe.g.resources
 FsSnowGlobe/obj/x86/Debug/FsSnowGlobe.fsproj.FileListAbsolute.txt
-FsSnowGlobe/packages.config
-FsSnowGlobe/bin
+/packages/
+packages.config
+FsSnowGlobe/bin/
+ParticleEngine/bin/
+ParticleEngine/obj/
 *.pdb
+*.suo
