--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+FsSnowGlobe/obj/
 FsSnowGlobe/obj/x86/Debug/FsSnowGlobe.exe
 FsSnowGlobe/obj/x86/Debug/FsSnowGlobe.g.resources
 FsSnowGlobe/obj/x86/Debug/FsSnowGlobe.fsproj.FileListAbsolute.txt
